--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react-dom": "^18.3.0",
     "@xyflow/react": "^12.0.4",
     "classcat": "^5.0.5",
+    "html-to-image": "^1.11.11",
     "nanoid": "^3.3.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
