--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@xyflow/react": "^12.0.4",
     "classcat": "^5.0.5",
     "html-to-image": "^1.11.11",
+    "html-to-png": "^0.0.1",
     "nanoid": "^3.3.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^6.26.0",
     "react-scripts": "5.0.1",
     "reactflow": "^11.11.4",
     "typescript": "^4.9.5",
